# webp

./: .env.example  .gitignore  README.md  convert.sh  main.py  pyproject.toml
notebooks/: exploration.ipynb
scripts/: settings.py
