[tool.poetry]
name = "webp"
version = "0.0.1"
description = "Conversion tool for .webp files"
authors = ["Andrew Corbett <andy@digilab.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
